# RideShare

./: Dockerfile  README.md  Ridesharing Analytics.docx  docker-compose.yml  main.py  pyproject.toml
docs/: FUTURE_WORK.md  LIMITATIONS.md  METHODOLOGY.md
src/backend/: analytics.py  data_loader.py  data_quality.py  main.py  ml_models.py  models.py  statistical_tests.py
src/frontend/: api_client.py  app.py  components.py
